--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Hello world</h1>
-    <p>one paragraph</p>
+    <p>real project</p>
     <script src="script.js"></script>
 </body>
 </html>
